fixed overflow + updated readme

--- a/animation.css
+++ b/animation.css
@@ -13,7 +13,7 @@
     'j  i  h  g';
 
   grid-template-rows: repeat(4, 25%);
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto;
 
   --stagger-delay: 100ms;
 }
