--- a/base.css
+++ b/base.css
@@ -1,177 +1,56 @@
 body {
     background: #21252B;
     color:#F1F1F1 ;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Noto Sans',arial, sans-serif;
     font-size: 100%;
 }
 h1 {
   text-align: center;
 }
 
-/*
-.animated-grid  >.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #353535;
-    font-size: 3rem;
-    color: #fff;
-    box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
-    height: 100%;
-    width: 100%;
-    border-radius: 4px;
-    transition: all 500ms;
-    overflow: hidden;
-
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    background-color: rgb(0,191,255);
-    animation: cardEntrance 500ms ease-out;
-    animation-fill-mode: backwards;
- }
-
-.card:hover {
-    box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
-    transform: translateY(-3px) scale(1.1);
- }
-
- .row > div {
-   padding: 20px;
-   background-color: lightblue;
-   color: black;
-   font-size: 15;
-   border: 2px solid black;
-   margin:5px;
- }
- .container {
-   display: inline-flex;
-   flex-wrap:wrap;
-   width: 100%;
- }
-
- .container >.card {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   background: #353535;
-   font-size: 2rem;
-   color: #fff;
-   box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
-   border-radius: 4px;
-   transition: all 500ms;
-   overflow: hidden;
-
-   background-size: cover;
-   background-position: center;
-   background-repeat: no-repeat;
-
-   background-color: rgb(0,191,255);
-   animation: cardEntrance 500ms ease-out;
-   animation-fill-mode: backwards;
-
-   //Aus .container > div
-   background-color: rgb(0,191,255);
-   margin: 10px;
-
-   height:400px;
-   font-size: 24px;
-   text-align: center;
-   justify-content: center;
-   align-items: center;
- }
-*/
-
- @media (min-width: 1700px) {
-   h1::after {
-     content: "Desktop-User"
-   }
-   .container >.card {
-        width: 23.5%;
-        height: 400px;
-      }
-
- }
-
- @media (max-width: 859px) {
-   h1::after {
-     content: "Mobile-User"
-   }
-   .container >.card {
-     width: 100%;
-   }
- }
- @media (max-width: 1299px) and (min-width:860px) {
-   h1::after {
-     content: "Großer Mobile-User"
-   }
-   .container >.card {
-     width: 47%;
-   }
- }
- @media (max-width: 1699px) and (min-width:1300px) {
-   h1::after {
-     content: "Kleiner Desktop"
-   }
-   .container >.card {
-     width: 31.5%;
-   }
- }
-
-
-
-
 .ParentVH {
   border: 3px solid black;
-  height: 93vh;
+  //height: 93vh;
+  display: flex;
+  flex-wrap: wrap;
   margin:10px;
 }
 
 .parentBox {
-  //height: 97%;
-  //margin: 0;
-
+  width: 100%;
   display: grid;
   padding: 1em;
   grid-column-gap: 20px;
-  grid-row-gap: 10px;
+  grid-row-gap: 17px;
   grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
-  overflow: hidden;
 }
 
 .box{
+  min-height: 270px;
   display: grid;
+
+  //remove later
   place-items: center;
-  //background: #5D0BF6;
-  background: linear-gradient(310deg, #550AEE, #C424FF);
+  background: linear-gradient(315deg, #550AEE, #C424FF);
 
-  border-radius: 7px;
-  transition: all .2s ease-in-out;
-
-  //padding:0px; //Change later if filled
-}
-
-.parent {
-  border: 3px solid black;
-  height: 99vh;
-  margin:10px;
+  border-radius: 20px;
+  transition: all .12s ease-in-out;
 }
 
 .boxText {
-  margin-right: 20px;
-  margin-left: 20px;
-  border: 7px solid black;
+  border: 3px solid black;
   font-weight: lighter;
+  display: flex ;
+  margin-left: 7%;
+  margin-right: 7%;
+  margin-top: 1%;
+  color:white;
 }
 
-
 .boxHeading {
-  font-weight:normal;
+  font-weight: lighter;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: table;
   margin: 0 auto;
   padding-top: 15px;
@@ -193,3 +72,67 @@ h1 {
   border-radius: 1rem;
   padding: 1rem;
 }
+
+.ParentVHHeading {
+  border: 4px solid black;
+  flex-basis: 100%;         //makes the title above the parentBox
+}
+
+.SectionHeading {
+  text-align: center;
+  margin: 0px;
+  font-size: 2rem;
+  font-weight: lighter;
+}
+
+.parent {
+  border: 3px solid black;
+  height: 99vh;
+  margin:10px;
+}
+
+/*
+@media (min-width: 1700px) {
+  h1::after {
+    content: "Desktop-User"
+  }
+  .container >.card {
+       width: 23.5%;
+       height: 400px;
+     }
+}
+
+@media (max-width: 859px) {
+  h1::after {
+    content: "Mobile-User"
+  }
+
+  .container >.card {
+    width: 100%;
+  }
+}
+@media (max-width: 1299px) and (min-width:860px) {
+  h1::after {
+    content: "Großer Mobile-User"
+  }
+  .container >.card {
+    width: 47%;
+  }
+}
+@media (max-width: 1699px) and (min-width:1300px) {
+  h1::after {
+    content: "Kleiner Desktop"
+  }
+  .container >.card {
+    width: 31.5%;
+  }
+}
+@media screen and (max-height:1000px) {
+  h1::before {
+    content: "Hello "
+  }
+  .ParentVH {
+    height: 450vh;
+    }
+}
+*/
